add input placeholders

--- a/views/subscriptions/form.hbs
+++ b/views/subscriptions/form.hbs
@@ -72,11 +72,11 @@
     <h1>Subscribe to Weather Api</h1>
     <label>
       <span>Email</span>
-      <input name='email' type='email' required />
+      <input name='email' type='email' placeholder="email" required />
     </label>
     <label>
       <span>City</span>
-      <input name='city' type='string' required />
+      <input name='city' type='string' placeholder="City" required />
     </label>
     <label>
       <span>Frequency</span>
