--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -27,7 +27,7 @@
     }
 
     body {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: Helvetica, Arial, sans-serif;
       background-color: var(--c-bg-1);
       color: var(--c-fg-1);
     }
