mark inputs as required in form view

--- a/views/subscriptions/form.hbs
+++ b/views/subscriptions/form.hbs
@@ -74,11 +74,11 @@
     <h1>Subscribe to weather updates</h1>
     <label>
       <span>Email</span>
-      <input name='email' type='email' placeholder="email" />
+      <input name='email' type='email' placeholder="email" required />
     </label>
     <label>
       <span>City</span>
-      <input name='city' type='string' placeholder="City" />
+      <input name='city' type='string' placeholder="City" required />
     </label>
     <label>
       <span>Frequency</span>
